# natto

./: Cargo.toml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  stores.ts
frontend/src/components/base/: DataTable.tsx  sidebar.tsx  tableUtils.tsx
frontend/src/routes/: index.tsx  tableList.tsx
src/: error.rs  main.rs  state.rs
src/crud/: creation.rs  deletion.rs  mod.rs  retrieval.rs  table_list.rs
