[package]
name = "natto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7"}
gotcha = { git = "https://github.com/Kilerd/gotcha.git", version = "0.1.12" }
itertools = "0.13.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.128"
tokio = {version="1.40.0", features = ["full"]}
tokio-postgres = {version="0.7", features = ["with-serde_json-1"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = {version = "0.5", features = ["cors"]}
thiserror = "1.0.63"
rust_decimal = { version = "1.36.0", features = ["db-tokio-postgres"] }
